Setup unit test

--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "browser": "dist/helpers.js",
   "module": "dist/helpers.esm.js",
   "engines": {
-    "node": ">=8"
+    "node": ">=10"
   },
   "dependencies": {
     "core-js": "3",
+    "lodash": "^4.17.0",
     "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
@@ -45,7 +46,8 @@
   "scripts": {
     "build": "rollup -c",
     "lint": "eslint ./",
-    "lint-fix": "eslint ./ --fix"
+    "lint-fix": "eslint ./ --fix",
+    "test": "jest"
   },
   "browserslist": [
     "> 0.5%",
