--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,3 +14,5 @@ jobs:
           paths:
             - node_modules
       - run: yarn test
+      - store_test_results:
+          path: test-results.xml
