--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,4 @@ jobs:
             - ~/.cache/yarn
       - run: yarn test
       - codecov/upload:
-          file: coverage
+          file: coverage/clover.xml
