--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,4 @@
 version: 2.1
-orbs:
-  codecov: codecov/codecov@1.0.2
 jobs:
   build:
     working_directory: ~/repo
@@ -10,11 +8,16 @@ jobs:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "yarn.lock" }}
-      - run: yarn install --frozen-lockfile
+      - run:
+          name: install-dependencies
+          command: yarn install --frozen-lockfile
       - save_cache:
           key: dependency-cache-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
-      - run: yarn test
-      - codecov/upload:
-          file: coverage/lcov.info
+      - run:
+          name: run-tests
+          command: yarn test
+      - run:
+          name: upload-coverage
+          command: bash <(curl -s https://codecov.io/bash) -t ${CODECOV_TOKEN}
