--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "core-js": "3",
+    "date-fns": "^2.9.0",
     "lodash": "^4.17.0",
     "regenerator-runtime": "^0.13.3"
   },
