--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@risan/helpers",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0",
   "description": "Variety of helper functions.",
   "license": "MIT",
   "author": {
